# ClusterPilot

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package.json
backend/control-plane/: Dockerfile  pyproject.toml
backend/control-plane/app/: __init__.py  bootstrap.py  dependencies.py  main.py  store.py
backend/control-plane/app/api/: __init__.py
backend/control-plane/app/api/routers/: jobs.py  knowledge.py  model_management.py  nodes.py  provider_integrations.py
backend/control-plane/app/application/: __init__.py
backend/control-plane/app/application/services/: __init__.py  job_service.py  knowledge_service.py  model_service.py  node_service.py  provider_integration_service.py
backend/control-plane/app/infrastructure/: __init__.py
backend/control-plane/app/infrastructure/database/: models.py  seed.py  session.py
backend/control-plane/app/infrastructure/repositories/: memory.py  sqlalchemy.py
backend/control-plane/app/routers/: health.py  jobs.py  nodes.py
backend/control-plane/app/worker/: celery_app.py  embedding.py  knowledge_ingestion.py  tasks.py
backend/core/clusterpilot_core/: __init__.py  models.py  settings.py
backend/worker-agent/: Dockerfile  pyproject.toml
backend/worker-agent/clusterpilot_agent/: __init__.py  artifact_agent.py  bootstrap.py  config.py  control_plane.py  execution_agent.py  heartbeat_agent.py  inventory.py  inventory_agent.py  main.py  telemetry_agent.py
docs/: plano_framework_orquestracao_distribuida.docx
frontend/web-dashboard/: Dockerfile  package.json
frontend/web-dashboard/app/: globals.css  (+2 more)
(+14 files in other folders)
