[project]
name = "clusterpilot-api-control-plane"
version = "0.1.0"
description = "ClusterPilot FastAPI control plane MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
