[project]
name = "clusterpilot-worker-agent"
version = "0.1.0"
description = "ClusterPilot worker agent MVP"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9.0"
]

[project.scripts]
clusterpilot-agent = "clusterpilot_agent.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
